--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -12,6 +12,17 @@
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
 
+    const PropTypes = {
+      string(props, propName, componentName) {
+        const type = typeof props[propName]
+        if (type !== 'string') {
+          return new Error(
+            `This component ${componentName} needs the prop ${propName} to be a type of "string" but was a ${type} `,
+          )
+        }
+      },
+    }
+
     function Message({subject, greeting}) {
       return (
         <div className="message">
@@ -20,25 +31,17 @@
       )
     }
 
+    Message.propTypes = {
+      subject: PropTypes.string,
+      greeting: PropTypes.string,
+    }
+
     const element = (
       <div className="container">
-        <Message greeting="Hello" subject="World" />
+        <Message greeting={123} subject="World" />
         <Message greeting="Goodbye" subject="World" />
       </div>
     )
-
-    const PropTypes = {
-      string(props, propName, componentName) {
-        if (typeof props[propName] !== 'string') {
-          return new Error(`This isn't of type string`)
-        }
-      },
-    }
-
-    Message.propTypes = {
-      greeting: PropTypes.string,
-      subject: PropTypes.string,
-    }
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
     ReactDOM.render(element, document.getElementById('root'))
