--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -6,22 +6,23 @@
   <script src="https://unpkg.com/react@16.13.1/umd/react.development.js"></script>
   <script src="https://unpkg.com/react-dom@16.13.1/umd/react-dom.development.js"></script>
   <script src="https://unpkg.com/@babel/standalone@7.9.3/babel.js"></script>
+  <script src="https://unpkg.com/prop-types@15.7.2/prop-types.js"></script>
   <script type="text/babel">
     // 🐨 Make a function called `message` which returns the JSX we want to share
 
     // 🐨 use that function in place of the divs below with:
     // 💰 {message({children: 'Hello World'})} {message({children: 'Goodbye World'})}
 
-    const PropTypes = {
-      string(props, propName, componentName) {
-        const type = typeof props[propName]
-        if (type !== 'string') {
-          return new Error(
-            `This component ${componentName} needs the prop ${propName} to be a type of "string" but was a ${type} `,
-          )
-        }
-      },
-    }
+    // const PropTypes = {
+    //   string(props, propName, componentName) {
+    //     const type = typeof props[propName]
+    //     if (type !== 'string') {
+    //       return new Error(
+    //         `This component ${componentName} needs the prop ${propName} to be a type of "string" but was a ${type} `,
+    //       )
+    //     }
+    //   },
+    // }
 
     function Message({subject, greeting}) {
       return (
@@ -32,8 +33,8 @@
     }
 
     Message.propTypes = {
-      subject: PropTypes.string,
-      greeting: PropTypes.string,
+      subject: PropTypes.string.isRequired,
+      greeting: PropTypes.string.isRequired,
     }
 
     const element = (
