--- a/src/exercise/04.html
+++ b/src/exercise/04.html
@@ -38,10 +38,10 @@
     }
 
     const element = (
-      <div className="container">
+      <React.Fragment>
         <Message greeting={123} subject="World" />
         <Message greeting="Goodbye" subject="World" />
-      </div>
+      </React.Fragment>
     )
 
     // 💯 This is only the first step to making actual React components. The rest is in the extra credit!
